<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="compose">Compose</string>
    <string name="add_account">Add account</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="add_location">Add location</string>
    <string name="add_image">Add image</string>
    <string name="take_photo">Take photo</string>
    <string name="remove_location">Remove location</string>
    <string name="remove_image">Remove image</string>
    <string name="remove_photo">Remove photo</string>
    <string name="status_hint">What\'s happening?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="rest_base_url">REST Base URL</string>
    <string name="oauth_base_url">OAuth Base URL</string>
    <string name="signing_oauth_base_url">Signing OAuth Base URL</string>
    <string name="signing_rest_base_url">Signing REST Base URL</string>
    <string name="api_url_format">API URL Format</string>
    <string name="same_oauth_signing_url">Use same URL for OAuth signing</string>
    <string name="auth_type">Auth type</string>
    <string name="oauth">OAuth</string>
    <string name="xauth">xAuth</string>
    <string name="basic">Basic</string>
    <string name="twip_o">twip O Mode</string>
    <string name="advanced">Advanced</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="edit_api">Edit API</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>
    <string name="error_occurred">An error occurred, please try again.</string>
    <string name="error_already_logged_in">You have already logged in.</string>
    <string name="no_account_selected">No account selected.</string>
    <string name="empty_account_selection_disallowed">Please select at least one account.</string>
    <string name="error_unknown_error">Error: Unknown error, this is probably a bug.</string>
    <string name="error_message">Error: <xliff:g id="message">%s</xliff:g></string>
    <string name="error_message_with_action">Error while <xliff:g id="action">%1$s</xliff:g>: <xliff:g id="message">%2$s</xliff:g></string>
    <string name="error_message_rate_limit">Twitter\'s rate limit exceeded, please retry <xliff:g id="time">%s</xliff:g></string>
    <string name="error_message_rate_limit_with_action">Twitter\'s rate limit exceeded while <xliff:g id="action">%1$s</xliff:g>, please retry <xliff:g id="time">%2$s</xliff:g></string>
    <string name="select_account">Select account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="label_tweetstore_provider">FireTweet database provider</string>
    <string name="label_refresh_service">Refresh service</string>
    <string name="label_background_operation_service">Background operation service</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="tap_to_load_more">Tap to load more</string>
    <string name="delete">Delete</string>
    <string name="retweet">Retweet</string>
    <string name="retweets">Retweets</string>
    <string name="cancel_retweet">Cancel retweet</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="reply">Reply</string>
    <string name="share">Share</string>
    <string name="view_image">Image</string>
    <string name="view_map">Map</string>
    <string name="view_status">View tweet</string>
    <string name="view_user_profile">User profile</string>
    <string name="browser">Browser</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="statuses">Tweets</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="about">About</string>
    <string name="open_source_license">Open source license</string>
    <string name="api">API</string>
    <string name="default_api_settings">Default API settings</string>
    <string name="default_api_settings_summary">These settings only apply to newly logged-in accounts</string>
    <string name="consumer_key">Consumer key</string>
    <string name="consumer_secret">Consumer secret</string>
    <string name="ignore_ssl_error">Ignore SSL Error</string>
    <string name="ignore_ssl_error_summary">Ignore SSL Error, enable this if you are having problems with custom API server.</string>
    <string name="gzip_compressing">GZip compressing</string>
    <string name="gzip_compressing_summary">Compress all API requests, it can reduce data usage, but may not work on all API servers.</string>
    <string name="storage">Storage</string>
    <string name="database_item_limit">Database size limit</string>
    <string name="database_item_limit_summary">Upper limit of items stored in databases for each account, set to a smaller value to save space and increase loading speed.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary">Clear stored profile image cache.</string>
    <string name="clear_databases">Clear databases</string>
    <string name="clear_databases_summary">Clear all tweets, profiles, messages. Your account credentials won\'t be lost.</string>
    <string name="look_and_feel">Look and feel</string>
    <string name="display_profile_image">Display profile image</string>
    <string name="image_load_summary">Disabling this will increase list scroll speed and reduce data usage.</string>
    <string name="in_reply_to_name">In reply to <xliff:g id="user_name">%s</xliff:g></string>
    <string name="name_retweeted"><xliff:g id="user_name">%s</xliff:g> retweeted</string>
    <string name="name_and_another_retweeted"><xliff:g id="user_name">%1$s</xliff:g> and another retweeted</string>
    <string name="name_and_count_retweeted"><xliff:g id="user_name">%1$s</xliff:g> and <xliff:g id="retweet_count">%2$d</xliff:g> others retweeted</string>
    <string name="N_retweeted_quantity_one"><xliff:g id="retweet_count">%d</xliff:g> retweet</string>
    <string name="N_retweeted_quantity_other"><xliff:g id="retweet_count">%d</xliff:g> retweets</string>
    <string name="retweeted_by_name">Retweeted by <xliff:g id="user_name">%s</xliff:g></string>
    <string name="retweeted_by_name_with_count">Retweeted by <xliff:g id="user_name">%1$s</xliff:g> and <xliff:g id="retweet_count">%2$d</xliff:g> others</string>
    <string name="retweeted_by_count">Retweeted by <xliff:g id="retweet_count">%d</xliff:g> users</string>
    <string name="users_retweeted_this">Users retweeted this</string>
    <string name="users_favorited_this">Users favorited this</string>
    <string name="reply_to">Reply to <xliff:g id="user_name">%s</xliff:g></string>
    <string name="quote_user">Quote <xliff:g id="user_name">%s</xliff:g></string>
    <string name="time_source"><xliff:g id="time">%1$s</xliff:g> · <xliff:g id="source">%2$s</xliff:g></string>
    <string name="source"><xliff:g id="source">%s</xliff:g></string>
    <string name="filters">Filters</string>
    <string name="users">Users</string>
    <string name="user">User</string>
    <string name="keywords">Keywords</string>
    <string name="sources">Sources</string>
    <string name="content">Content</string>
    <string name="customize">Customize</string>
    <string name="set_nickname">Set nickname</string>
    <string name="set_color">Set color</string>
    <string name="clear">Clear</string>
    <string name="pick_color">Pick color</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="bottom_compose_button">Bottom \"compose\" button</string>
    <string name="bottom_compose_button_summary">Place the compose button in the bottom, you can enable this if your screen is large.</string>
    <string name="leftside_compose_button">Left side compose button</string>
    <string name="leftside_compose_button_summary">Put the compose button on the left.</string>
    <string name="bottom_send_button">Bottom \"send\" button</string>
    <string name="load_item_limit">Load item limit</string>
    <string name="load_item_limit_summary">Set items limit per load.</string>
    <string name="load_more_automatically">Load more content automatically</string>
    <string name="load_more_automatically_summary">Load more content (e.g. photos, maps, tweets) automatically</string>
    <string name="quote">Quote</string>
    <string name="add_rule">Add rule</string>
    <string name="text_size">Text size</string>
    <string name="text_size_summary">Text size of tweets.</string>
    <string name="cannot_get_location">Can\'t get your location.</string>
    <string name="drafts">Drafts</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="url">URL</string>
    <string name="favorites">Favorites</string>
    <string name="name">Name</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="more">More</string>
    <string name="quote_format">Quote format</string>
    <string name="quote_format_summary">\"[TEXT]\" = Tweet text\n\"[NAME]\" = Twitter username</string>
    <string name="direct_messages">Messages</string>
    <string name="blocked_users">Blocked users</string>
    <string name="set_as_default">Set as default</string>
    <string name="search_users">Search Users</string>
    <string name="search_statuses">Search Tweets</string>
    <string name="created_at">Created at</string>
    <string name="search_hint">Search tweets or users</string>
    <string name="remember_position">Remember position</string>
    <string name="remember_position_summary">Remember list/tab position before closing FireTweet</string>
    <string name="user_blocked">Blocked this user.</string>
    <string name="users_blocked">Blocked these users.</string>
    <string name="user_unblocked">Unblocked this user.</string>
    <string name="reported_user_for_spam">Reported this user for spam.</string>
    <string name="reported_users_for_spam">Reported these users for spam.</string>
    <string name="filename_hint">Filename</string>
    <string name="overwrite_confirm">File exists, overwrite?</string>
    <string name="save_as">Save as</string>
    <string name="please_wait">Please wait.</string>
    <string name="file_saved_to">File saved to <xliff:g id="filename">%s</xliff:g> .</string>
    <string name="saved_to_gallery">Saved to gallery.</string>
    <string name="proxy">Proxy</string>
    <string name="http_proxy">HTTP Proxy</string>
    <string name="http_proxy_summary">Use HTTP Proxy for all network requests.</string>
    <string name="proxy_host">Proxy Host</string>
    <string name="proxy_port">Proxy Port</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="report_for_spam">Report spam</string>
    <string name="twitter_mute_user">Mute user</string>
    <string name="twitter_muted_users">Muted users</string>
    <string name="message_user_muted">Added this user to filter list. You will not see tweets from this user in your home timeline/mentions list.</string>
    <string name="message_users_muted">Added users to filter list. You will not see tweets from these users in your home timeline/mentions list.</string>
    <string name="message_user_unmuted">Removed this user from filter list.</string>
    <string name="inbox">Inbox</string>
    <string name="load_images">Load images</string>
    <string name="other_settings">Other settings</string>
    <string name="notifications">Notifications</string>
    <string name="tabs">Tabs</string>
    <string name="network">Network</string>
    <string name="settings_interface">Interface</string>
    <string name="appearance">Appearance</string>
    <string name="function">Function</string>
</resources>